--- a/lesson 9/index.html
+++ b/lesson 9/index.html
@@ -28,7 +28,19 @@
 <script src="https://ajax.googleapis.com/ajax./jQuery/1.11.3/jQuery.min.js"></script>
 
 <section id="cons"></section>
-.con
+<div class="container"></div>
+<div class="row"></div>
+   <div class="col-lg-3">
+   	<img src="img/Screenshot_1.png" alt="иконка 1"> 
+   </div>
+   <div class="col-lg-3"></div>
+   <img src="img/Screenshot_2.png" alt="иконка 2">
+   </div>
+   <div class="col-lg-3"></div>
+   <img src="img/Screenshot_3.png" alt="иконка 3">
+   </div>
+   <div class="col-lg-3"></div>
+   <img src="img/Screenshot_4.png" alt="иконка 4">
 
 <!-- Include all compiled plugiled (below) or include individual files as needed -->
 <script src="js/boostrap.min.js/"></script>
