--- a/lesson-9/index.html
+++ b/lesson-9/index.html
@@ -1,48 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-    <meta name="viewport" content="width= device- width, intial- scalt=1">
-	<!--The above 3 meta tags "must" come first in the head;any other head content must come"after"these tags-->
-	<title>Заголовок сайта</title>
- <!--Bootstrap -->
- <link href="css/boostrap.min.css" rel="stylesheet">
- <link rel="stylesheet" href="css/style.css">
-<!-- HTML5 shim and Respond.js for IEB support of HTML5 elements and media queries -->
-<!-- WARNING:Respond.js doesn't work if yof view the page via file:// -->
-<!-- {if lt IE9}>
-<script src= "https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-<script src= "https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-<!{endif}-->
-</head>
+	<meta http-equiv="X-UA-Compatible" content="Ie=edge">
+    <meta name="viewport" content="width=device-width,intial-Scale=1">
+    <!-- The above 3 meta tags "must" come first in the head; any other head content must come "after" these mags --> 
+    <title>Заголовок сайта</title>
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="tylesheet">
+    <link rel="stylesheet" href="css/style.css"> 
+    <!-- HTML5 shim and Respond js for ШУИ support of HTML5 elements and media queries-->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!-- [Lif lt IE 9] >
+    <scripe src= "https:// oss. maxcdin.com/html5shiv/3/7.2/html5shiv. min.js"></scriv>
+    <scripe src= "https:// oss. maxcdin.com/respond/1.4.2/respond.min.js"></scriv>
+    <![endlf]-->
+ </head>
 <body>
- <!--=============== Главный экран ================= -- >
- <section id="mai">
- 	<div class="container">
- 		<div class="row main_headr text-center">
- 			<h1>Пример колоночной верстки <br>bootstar</h1>
-</div>
-</section>
-<!-- jQuery (necessary for Bootstrap's javascript plugins)-->
-<script src="https://ajax.googleapis.com/ajax./jQuery/1.11.3/jQuery.min.js"></script>
-
-<section id="cons"></section>
-<div class="container"></div>
-<div class="row"></div>
-   <div class="col-lg-3">
-   	<img src="img/Screenshot_1.png" alt="иконка 1"> 
-   </div>
-   <div class="col-lg-3"></div>
-   <img src="img/Screenshot_2.png" alt="иконка 2">
-   </div>
-   <div class="col-lg-3"></div>
-   <img src="img/Screenshot_3.png" alt="иконка 3">
-   </div>
-   <div class="col-lg-3"></div>
-   <img src="img/Screenshot_4.png" alt="иконка 4">
-
-<!-- Include all compiled plugiled (below) or include individual files as needed -->
-<script src="js/boostrap.min.js/"></script>
+		
+  <!--=================== Главный экра ===================-->
+  <Section id="main">
+  	<div class="container">
+  		<div class="row text-center"></div>
+  		<h1>Пример колоночной верстки <br> bootstrap 3</br></h1>
+  	
+  	</div>
+  </Section>
+ 
+  
+<!-- jquery (necessary for Bootstrap's JavaScript plugins) -->	
+  <script src="https:^//ajax.googleapis.com/ajax/libes/jquery/1.11.3/jquery.min.js"></script>
+  <!-- Inclube all compiled plugins (belov), or include individual files as need -->
+  <script src="js/bootstrap.min.js"></script>	   		
 </body>
 </html>
