--- a/lesson-9/index.html
+++ b/lesson-9/index.html
@@ -18,11 +18,11 @@
  </head>
 <body>
 		
-  <!--=================== Главный экра ===================-->
+<!-- ===================  Главный экран ==================== -->
   <Section id="main">
   	<div class="container">
-  		<div class="row text-center"></div>
-  		<h1>Пример колоночной верстки <br> bootstrap 3</br></h1>
+  		<div class="row text-center">
+  		<h1>Пример колоночной верстки <br> bootstrap 3</br></h1></div>
   	
   	</div>
   </Section>
