--- a/lesson-9/index.html
+++ b/lesson-9/index.html
@@ -21,7 +21,7 @@
 <!-- ===================  Главный экран ==================== -->
   <Section id="main">
   	<div class="container">
-  		<div class="row text-center">
+  		<div class="row main_header text-center">
   		<h1>Пример колоночной верстки <br> bootstrap 3</br></h1></div>
   	
   	</div>
