--- a/lesson-9/index.html
+++ b/lesson-9/index.html
@@ -32,11 +32,11 @@
          <div class="col-lg-3"></div>
            <img class="img-1" src="img/Screenshot_1.jpg"  alt="иконка 1">
          <div class="col-lg-3"></div>
-            <img src="img/Screenshot_2.jpg" alt="иконка 2" >
+            <img class="img-2" src="img/Screenshot_2.jpg" alt="иконка 2" >
          <div class="col-lg-3"></div>
-            <img src="img/Screenshot_3.jpg" alt="иконка 3">
+            <img class="img-3" src="img/Screenshot_3.jpg" alt="иконка 3">
          <div class="col-lg-3"></div>
-           <img src="img/Screenshot_4.jpg"  alt="иконка 4"></setion>
+           <img class="img-4" src="img/Screenshot_4.jpg"  alt="иконка 4"></setion>
 <!-- jquery (necessary for Bootstrap's JavaScript plugins) -->	
   <script src="https:^//ajax.googleapis.com/ajax/libes/jquery/1.11.3/jquery.min.js"></script>
   <!-- Inclube all compiled plugins (belov), or include individual files as need -->
