--- a/lesson-9/index.html
+++ b/lesson-9/index.html
@@ -31,20 +31,20 @@
        <div class="row"></div>
          <div class="col-lg-3">
            <img class="img-responsive-1" src="img/Screenshot_1.jpg"  alt="иконка 1"></div>
-           <h3>Заголовок 1</h3>
+           <h3>Заголовок 1</h3></div>
          <div class="col-lg-3">
             <img class="img-responsive-2" src="img/Screenshot_2.jpg" alt="иконка 2" ></div>
-            <h3>Заголовок 2</h3> 
+            <h3>Заголовок 2</h3></div> 
          <div class="col-lg-3">
             <img class="img-responsive-3" src="img/Screenshot_3.jpg" alt="иконка 3"></div>
-            <h3>Заголовок 3</h3>
+            <h3>Заголовок 3</h3></div>
          <div class="col-lg-3">
            <img class="img-responsive-4" src="img/Screenshot_4.jpg"  alt="иконка 4"></div>
-           <h3>Заголовок 4</h3>
+           <h3>Заголовок 4</h3></div>
   </setion>
 <!-- jquery (necessary for Bootstrap's JavaScript plugins) -->	
   <script src="https:^//ajax.googleapis.com/ajax/libes/jquery/1.11.3/jquery.min.js"></script>
   <!-- Inclube all compiled plugins (belov), or include individual files as need -->
   <script src="js/bootstrap.min.js"></script>	   		
 </body>
-</html>
+</html
