--- a/lesson-9/index.html
+++ b/lesson-9/index.html
@@ -30,15 +30,19 @@
     <div class="container"></div>
        <div class="row"></div>
          <div class="col-lg-3">
+         <div class="div - 1">
            <img class="img-responsive-1" src="img/Screenshot_1.jpg"  alt="иконка 1"></div>
            <h3>Заголовок 1</h3></div>
          <div class="col-lg-3">
+         <div class="div - 2">
             <img class="img-responsive-2" src="img/Screenshot_2.jpg" alt="иконка 2" ></div>
             <h3>Заголовок 2</h3></div> 
          <div class="col-lg-3">
+         <div class="div - 3">
             <img class="img-responsive-3" src="img/Screenshot_3.jpg" alt="иконка 3"></div>
             <h3>Заголовок 3</h3></div>
          <div class="col-lg-3">
+         <div class="div - 4">
            <img class="img-responsive-4" src="img/Screenshot_4.jpg"  alt="иконка 4"></div>
            <h3>Заголовок 4</h3></div>
   </setion>
