--- a/lesson-10/index.html
+++ b/lesson-10/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Позиционирование</title>
-<link rel="stylesheet" href="cssstyle.css">
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div class="box"></div>	
