--- a/lesson-13/index.html
+++ b/lesson-13/index.html
@@ -10,7 +10,7 @@
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="css/style.css">
-<!-- HTML5 shim and Respond.js.for ШУИ suppotr of HTML5 elements and media queries --> 
+<!-- HTML5 shim and Respond.js.for IEB suppotr of HTML5 elements and media queries --> 
 <!-- WARNINGК: Respond.js doesn't work if you view the page via file:// -->
 <!--[if le IE 9] -->
 <!--script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -23,12 +23,12 @@
 </html>
 <header id="maim">
 	<div class="container">
-	<div class="row maim-head">	
-	<div class="col-lg-6 main- logo">
-	<div class="colot-logo-border">
+		<div class="row maim-head">	
+			<div class="col-lg-6 main- logo">
+				<div class="colo-logo-border">
 	<p><span class="colot-logo">S</span>mart<p>
-	</div>
-   </div
+				</div>
+   			</div
    <div class="col-lg-6 main-nav">
      <a class="main-nav-bar" href="#">
        <span class="line"></span>
@@ -37,4 +37,29 @@
 </div>
 <div class="row main-text">
 <div class="col-lg-8 col-lg-offset-2">
-</header>
+  <h1><span>Smart</span>Agency Landing Page</h1>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+   Maiores, fuga provident. Libero magni quibusdam labote ad iste
+   saepe hic, maxime qui ipsum tempore beatae, volu tomi ptates
+   doloremque rerum aspernatur dolorum at!</p>
+  </div>
+ </div>
+<div class="row">
+<div class="col-lg-4">
+  <div class="main-form"></div>
+    <p class="main-form-header"><span>Send</span> A Message</p>
+    <form action="#">
+      <input type="text" placeholder="Your Name">
+      <input type="email" required placeholder="Your Email">
+      <textarea placeholder="Your Message" rows="3"></textarea>	
+      <button class="main-form-botn" type="submit">Send Message</button>
+     </form>
+    </div>
+  </div>
+ </div>
+ </div>
+
+
+
+
+
