--- a/lesson-10/index.html
+++ b/lesson-10/index.html
@@ -6,8 +6,8 @@
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div class="box"></div>
-<div class="box"></div>
+<div class="box-1"></div>
+<div class="box-2"></div>
 </body>
 </html>
 
