--- a/lesson-13/index.html
+++ b/lesson-13/index.html
@@ -21,10 +21,10 @@
 	
 </body>
 </html>
-<header id="maim">
+<header id="main">
 	<div class="container">
-		<div class="row maim-head">	
-			<div class="col-lg-6 main- logo">
+		<div class="row main-head">	
+			<div class="col-lg-6 main-logo">
 				<div class="colo-logo-border">
 	<p><span class="colot-logo">S</span>mart<p>
 				</div>
@@ -58,6 +58,7 @@
   </div>
  </div>
  </div>
+
 
 
 
